<resources>
    <string name="app_name">Hungry</string>
    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Hotels</string>
    <string name="dish">Dish</string>
    <string name="order">Orders</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="update">Update</string>
    <string name="mobile_num">Enter Mobile Number</string>
    <string name="user_name">Enter Name</string>
    <string name="privacy_msg">This number will not used for any kind of promotional activity. it will kept confidential . For more please refer to our privacy policy</string>
    <string name="send_otp">Send OTP</string>
    <string name="register">Register</string>

    <string name="verify_otp">Verify OTP</string>


    <string name="settings">Settings</string>

    <string name="item_total_name">Net Total Amount</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="tax">Standard Service Charge</string>
    <string name="discount">Discount</string>
    <string name="a_new_version_is_now_available">A new version is now available</string>
    <string name="please_update_the_app">Please update the app</string>
    <string name="default_notification_channel_id">1262</string>
    <string-array name="genders">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_address">Map</string>
</resources>
