<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_frag"
        android:icon="@drawable/ic_restaurant_black_24dp"
        android:iconTint="@color/colorPrimaryDark"
        android:title="@string/title_home" />

    <item
        android:id="@+id/dish_frag"
        android:icon="@drawable/ic_restaurant_menu_black_24dp"
        android:iconTint="@color/colorPrimaryDark"
        android:title="@string/dish" />

    <item
        android:id="@+id/order_frag"
        android:icon="@drawable/ic_order_black_24dp"
        android:iconTint="@color/colorPrimaryDark"

        android:title="@string/order" />

    <item
        android:id="@+id/profile_frag"
        android:icon="@drawable/ic_person_black_24dp"
        android:iconTint="@color/colorPrimaryDark"

        android:title="@string/title_profile" />

</menu>
