<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="ProfileViewModel"
            type="com.hungry.customer.profile.fragment.viewmodel.ProfileViewModel" />



    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    android:orientation="vertical"
    >
<!--    app:navigationIcon='@drawable/ic_menu_black_24dp'-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/colorPrimaryDark"
        android:layout_alignParentStart="true"
        app:title="Hungry"
        android:elevation="@dimen/dp_5"

        android:background="@color/colorPrimary" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardElevation="@dimen/dp_2"
        android:elevation="@dimen/dp_5"
        android:layout_margin="@dimen/dp_2"
        app:cardBackgroundColor="@color/white"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_30"
        android:layout_marginTop="100dp"
        android:layout_centerInParent="true"
        android:orientation="vertical" >



        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/profile_setting"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/mobie"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:editable="false"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/ic_smartphone_black_24dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/mobile_num"
            android:text="@{ProfileViewModel.userMutableLiveData.getCM_MOBILE()}"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/dp_14" />




        <EditText
            android:text='@{ProfileViewModel.userMutableLiveData.getCM_FIRST_NAME()+" "+ProfileViewModel.userMutableLiveData.getCM_LAST_NAME()}'
            android:id="@+id/name"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/ic_account_box_black_24dp"
            android:drawablePadding="8dp"
            android:layout_marginTop="@dimen/dp_15"
            android:editable="false"
            android:gravity="center_vertical"
            android:hint="@string/user_name"

            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/dp_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"

            android:background="@drawable/border"
            >


            <Spinner
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:onItemSelected="@{(parent,view,pos,id)->ProfileViewModel.onSelectCity(parent,view,pos,id)}"
                android:layout_height="43dp"
                android:padding="5dp" />



        </LinearLayout>
        <ProgressBar
            android:id="@+id/ProgressBar"
            style="?android:attr/spinnerMode"
            android:layout_width="34dp"
            android:layout_height="29dp"
            android:layout_gravity="center"
            android:visibility="@{ProfileViewModel.isloading?View.VISIBLE : View.GONE}" />
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/updateborder"
            android:padding="5dp"
            android:onClick="@{(v) -> ProfileViewModel.onClick(v)}"
            android:layout_gravity="center"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/DarkGreen"
            android:textSize="@dimen/text_16sp"
            android:textStyle="normal" />

    </LinearLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_msg"
        android:textColor="@color/grey"
        android:textSize="@dimen/dp_14"
        android:layout_margin="@dimen/dp_15"
        android:textStyle="normal"
        android:layout_marginTop="@dimen/dp_15"/>



</LinearLayout>
</layout>