<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="@dimen/dp_5"
    android:layout_margin="@dimen/dp_5"
    app:cardBackgroundColor="@color/white"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_10"
    android:layout_marginTop="00dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp_12"
                android:id="@+id/total_item"
                android:textColor="@color/black"
                android:text="@string/item_total_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/total_item"
                android:text="@string/delivery_fees"
                android:textSize="@dimen/dp_12"
                android:textColor="@color/black"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/total_item"
                android:text="@string/tax"
                android:textSize="@dimen/dp_12"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/total_item"
                android:text="@string/discount"
                android:textSize="@dimen/dp_12"
                android:textColor="@color/black" />


            <View
                android:layout_width="wrap_content"
                android:background="@color/black"
                android:layout_height="1dp"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total Amount"
                android:layout_weight="0.5"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_12" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rs. 170"
            android:textSize="@dimen/dp_12"
            android:textColor="@color/black" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rs. 20"
            android:textSize="@dimen/dp_12"
            android:textColor="@color/black" />




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rs. 0"
            android:textSize="@dimen/dp_12"
            android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rs.170"
                android:textSize="@dimen/dp_12"
                android:textColor="@color/black" />
            <View
                android:layout_width="wrap_content"
                android:background="@color/black"
                android:layout_height="1dp"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rs. 170"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/dp_12" />


        </LinearLayout>

    </LinearLayout>




</LinearLayout>

</androidx.cardview.widget.CardView>