<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/black"
        android:layout_alignParentStart="true"
        app:title="Login"
        android:elevation="@dimen/dp_5"
        app:navigationIcon='@drawable/ic_menu_black_24dp'
        android:background="@color/colorPrimary" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/login_img"
        android:layout_gravity="center"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardElevation="@dimen/dp_2"
        android:elevation="@dimen/dp_5"
        android:layout_margin="@dimen/dp_10"
        app:cardBackgroundColor="@color/white"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"

            android:layout_marginTop="0dp"
            android:layout_centerInParent="true"
            android:orientation="vertical" >



            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="LOGIN"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_emailid"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:drawableLeft="@drawable/ic_smartphone_black_24dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/mobile_num"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/dp_14" />




            <EditText
                android:id="@+id/login_password"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:drawableLeft="@drawable/ic_account_box_black_24dp"
                android:drawablePadding="8dp"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical"
                android:hint="@string/user_name"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/dp_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/border">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:layout_height="40dp" />
            </LinearLayout>


            <EditText
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:drawableLeft="@drawable/ic_smartphone_black_24dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="Enter Your OTP"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/dp_14" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@drawable/addtocart_border"
                android:padding="5dp"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_gravity="center"
                android:text="@string/send_otp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16sp"
                android:textStyle="normal" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_msg"
        android:textColor="@color/grey"
        android:textSize="@dimen/dp_14"
        android:layout_margin="@dimen/dp_15"
        android:textStyle="normal"
        android:layout_marginTop="@dimen/dp_15"/>



</LinearLayout>