<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="androidx.recyclerview.widget.LinearLayoutManager"/>
    <variable
        name="OrderSummaryViewModel"
        type="com.example.hungry.ordersummary.viewmodel.OrderSummaryViewModel" />
    <variable
        name="Adapter"
        type="com.example.hungry.ordersummary.adapter.OrderSummaryAdapter" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/colorPrimaryDark"
        android:layout_alignParentStart="true"
        app:title="Order Summary"
        android:elevation="@dimen/dp_5"
        app:navigationIcon='@drawable/ic_menu_black_24dp'
        android:background="@color/colorPrimary" >


    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/summary_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:color="?android:colorControlHighlight"
        android:adapter="@{Adapter}"
        android:fastScrollEnabled="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:gravity="start"
        android:verticalScrollbarPosition="right"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:elevation="@dimen/dp_5"
        android:layout_margin="@dimen/dp_5"
        app:cardBackgroundColor="@color/white"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1.8"
                android:layout_margin="@dimen/dp_5"
                android:hint="Enter Promo code"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:background="@drawable/right_arrow_24dp"
                android:layout_margin="@dimen/dp_5"
                android:hint=""/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Header -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:elevation="@dimen/dp_5"
        android:layout_margin="@dimen/dp_5"
        app:cardBackgroundColor="@color/white"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:layout_marginTop="00dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dp_12"
                        android:id="@+id/total_item"
                        android:textColor="@color/black"
                        android:text="@string/item_total_name"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/total_item"
                        android:text="@string/delivery_fees"
                        android:textSize="@dimen/dp_12"
                        android:textColor="@color/black"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/total_item"
                        android:text="@string/tax"
                        android:textSize="@dimen/dp_12"
                        android:textColor="@color/black" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/total_item"
                        android:text="@string/discount"
                        android:textSize="@dimen/dp_12"
                        android:textColor="@color/darkGreen" />


                    <View
                        android:layout_width="wrap_content"
                        android:background="@color/black"
                        android:layout_height="1dp"></View>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total Amount"
                        android:layout_weight="0.5"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp_12" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dp_12"
                        android:text='@{"Rs. "+OrderSummaryViewModel.netTotal.doubleValue()}'
                        android:textColor="@color/black" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@{"Rs. "+OrderSummaryViewModel.deliveryFees.doubleValue()}'
                        android:textSize="@dimen/dp_12"
                        android:textColor="@color/black" />




                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@{"Rs. "+OrderSummaryViewModel.servicecharge.doubleValue()}'
                        android:textSize="@dimen/dp_12"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@{"Rs. "+OrderSummaryViewModel.discount.doubleValue()}'
                        android:textSize="@dimen/dp_12"
                        android:textColor="@color/darkGreen" />
                    <View
                        android:layout_width="wrap_content"
                        android:background="@color/black"
                        android:layout_height="1dp"></View>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@{"Rs. "+(OrderSummaryViewModel.netTotal.doubleValue()+OrderSummaryViewModel.deliveryFees.doubleValue()+OrderSummaryViewModel.servicecharge.doubleValue()-OrderSummaryViewModel.discount.doubleValue())}'
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/dp_12" />


                </LinearLayout>

            </LinearLayout>




        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_add"
            android:paddingLeft="@dimen/dp_5"
            android:text="Address"
            />



    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_5"

        android:elevation="@dimen/dp_5"
        app:cardBackgroundColor="@color/DarkGreen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:background="@color/DarkGreen"
                android:text="Confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_14"
                android:textStyle="bold" />



        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>
</layout>